--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Server_files\Modes\IMode.cs" />
+    <Compile Include="src\Server_files\Modes\ManualMode.cs" />
     <Compile Include="src\Server_files\Devices\IDevice.cs" />
     <Compile Include="src\Server_files\Forms\Window.cs">
       <SubType>Form</SubType>
