--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -66,6 +66,11 @@
     <Compile Include="src\Server_files\Devices\KUKA\RSI\OutputFrame.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\RSI\RSIAdapter.cs" />
     <Compile Include="src\Server_files\Server.cs" />
+    <Compile Include="src\Server_files\TEST\RequestString.cs" />
+    <Compile Include="src\Server_files\TEST\ResponseString.cs" />
+    <Compile Include="src\Server_files\TEST\RSIServer.cs" />
+    <Compile Include="src\Server_files\TEST\StringOperations.cs" />
+    <Compile Include="src\Server_files\TEST\UdpListener.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
