--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -98,6 +98,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="src\Doc_files\NatNetUsersGuide.pdf" />
     <None Include="src\Doc_files\RSI_40.pdf" />
     <None Include="src\KUKA_files\RSI_Ethernet.rsix" />
     <None Include="src\KUKA_files\RSI_Ethernet.src" />
