--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Server_files\Devices\OptiTrack\InputFrame.cs" />
+    <Compile Include="src\Server_files\Devices\OptiTrack\OptiTrackCalibration.cs" />
     <Compile Include="src\Server_files\Tasks\ITask.cs" />
     <Compile Include="src\Server_files\Devices\IDevice.cs" />
     <Compile Include="src\Server_files\Forms\Window.cs">
