--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -73,7 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Server_files\TrajectoryGenerator.cs" />
+    <Compile Include="src\Server_files\Devices\KUKA\TrajectoryGenerator.cs" />
     <Compile Include="src\Server_files\Devices\OptiTrack\InputFrame.cs" />
     <Compile Include="src\Server_files\Tasks\ITask.cs" />
     <Compile Include="src\Server_files\Devices\IDevice.cs" />
@@ -90,6 +90,7 @@
     <Compile Include="src\Server_files\Devices\KUKA\RSI\InputFrame.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\RSI\OutputFrame.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\RSI\RSIAdapter.cs" />
+    <Compile Include="src\Server_files\Utils\Timer.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -115,6 +116,7 @@
     </Compile>
     <None Include="src\Doc_files\NatNetUsersGuide.pdf" />
     <None Include="src\Doc_files\RSI_40.pdf" />
+    <None Include="src\Doc_files\Trajectory generator.pdf" />
     <None Include="src\KUKA_files\RSI_Ethernet.rsix" />
     <None Include="src\KUKA_files\RSI_Ethernet.src" />
   </ItemGroup>
