Poprawki lock'ków

--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -74,9 +74,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\KUKAVector.cs" />
+    <Compile Include="src\Server_files\Devices\KUKA\RobotVector.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\TrajectoryGenerator.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\WorkspaceLimit.cs" />
+    <Compile Include="src\Server_files\Devices\KUKA\RobotLimits.cs" />
     <Compile Include="src\Server_files\Devices\OptiTrack\InputFrame.cs" />
     <Compile Include="src\Server_files\Forms\ThreadSafeChart.cs">
       <SubType>UserControl</SubType>
