--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -74,7 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\PolynominalTest.cs" />
+    <Compile Include="src\Server_files\Devices\KUKA\Transformation.cs" />
+    <Compile Include="src\Server_files\Syf\PolynominalTest.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\TrajectoryGenerator.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\RobotLimits.cs" />
     <Compile Include="src\Server_files\Devices\OptiTrack\InputFrame.cs" />
