--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Old_files\TrajectoryGenerator.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\Transformation.cs" />
     <Compile Include="src\Old_files\PolynominalTest.cs" />
     <Compile Include="src\Server_files\Devices\KUKA\TrajectoryGenerator.cs" />
