--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -77,63 +77,63 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Old_files\Trajectory\Gen.cs" />
-    <Compile Include="src\Old_files\Trajectory\Gen3.cs" />
-    <Compile Include="src\Old_files\Trajectory\Gen2.cs" />
-    <Compile Include="src\Old_files\Trajectory\Gen4.cs" />
-    <Compile Include="src\Old_files\Trajectory\gen5.cs" />
-    <Compile Include="src\Old_files\Trajectory\Generator.cs" />
-    <Compile Include="src\Old_files\Trajectory\TrajectoryGenerator2.cs" />
-    <Compile Include="src\Old_files\Trajectory\TrajectoryGenerator7.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\E6AXIS.cs" />
-    <Compile Include="src\Server_files\Devices\OptiTrack\BallData.cs" />
-    <Compile Include="src\Server_files\Devices\OptiTrack\CalibrationTool.cs" />
-    <Compile Include="src\Server_files\Forms\CalibrationWindow.cs">
+    <Compile Include="src\ServerFiles\Maths\CubicSolver.cs" />
+    <Compile Include="src\ServerFiles\Maths\LUD3.cs" />
+    <Compile Include="src\ServerFiles\Maths\Matrix3.cs" />
+    <Compile Include="src\ServerFiles\Maths\QuadraticSolver.cs" />
+    <Compile Include="src\ServerFiles\Maths\QuarticSolver.cs" />
+    <Compile Include="src\ServerFiles\Maths\SVD3.cs" />
+    <Compile Include="src\ServerFiles\Maths\Vector3.cs" />
+    <Compile Include="src\Scrap\Trajectory\Gen.cs" />
+    <Compile Include="src\Scrap\Trajectory\Gen2.cs" />
+    <Compile Include="src\Scrap\Trajectory\Gen3.cs" />
+    <Compile Include="src\Scrap\Trajectory\Gen4.cs" />
+    <Compile Include="src\Scrap\Trajectory\gen5.cs" />
+    <Compile Include="src\Scrap\Trajectory\Generator.cs" />
+    <Compile Include="src\Scrap\Trajectory\OptiTrackCalibration.cs" />
+    <Compile Include="src\Scrap\Trajectory\PolynominalTest.cs" />
+    <Compile Include="src\Scrap\Trajectory\TrajectoryGenerator7.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\E6AXIS.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\TrajectoryGenerator2.cs" />
+    <Compile Include="src\ServerFiles\Devices\OptiTrack\BallData.cs" />
+    <Compile Include="src\ServerFiles\Devices\OptiTrack\CalibrationTool.cs" />
+    <Compile Include="src\ServerFiles\Forms\CalibrationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\Server_files\Forms\CalibrationWindow.Designer.cs">
+    <Compile Include="src\ServerFiles\Forms\CalibrationWindow.Designer.cs">
       <DependentUpon>CalibrationWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Server_files\Forms\KUKAChart.cs">
+    <Compile Include="src\ServerFiles\Forms\KUKADataPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="src\Server_files\Forms\KUKAChart.Designer.cs">
-      <DependentUpon>KUKAChart.cs</DependentUpon>
+    <Compile Include="src\ServerFiles\Forms\KUKADataPanel.Designer.cs">
+      <DependentUpon>KUKADataPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Old_files\Maths\CubicSolver.cs" />
-    <Compile Include="src\Old_files\Maths\LUD3.cs" />
-    <Compile Include="src\Old_files\Maths\Matrix3.cs" />
-    <Compile Include="src\Old_files\Maths\QuadraticSolver.cs" />
-    <Compile Include="src\Old_files\Maths\QuarticSolver.cs" />
-    <Compile Include="src\Old_files\Maths\SVD3.cs" />
-    <Compile Include="src\Server_files\Maths\Transformation.cs" />
-    <Compile Include="src\Old_files\Trajectory\PolynominalTest.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\TrajectoryGenerator.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\RobotLimits.cs" />
-    <Compile Include="src\Server_files\Devices\OptiTrack\InputFrame.cs" />
-    <Compile Include="src\Old_files\Trajectory\OptiTrackCalibration.cs" />
-    <Compile Include="src\Server_files\Forms\ThreadSafeChart.cs">
+    <Compile Include="src\ServerFiles\Maths\Transformation.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\TrajectoryGenerator.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\RobotLimits.cs" />
+    <Compile Include="src\ServerFiles\Devices\OptiTrack\InputFrame.cs" />
+    <Compile Include="src\ServerFiles\Forms\ThreadSafeChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="src\Server_files\Forms\ThreadSafeChart.Designer.cs">
+    <Compile Include="src\ServerFiles\Forms\ThreadSafeChart.Designer.cs">
       <DependentUpon>ThreadSafeChart.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Server_files\Applications\IApplication.cs" />
-    <Compile Include="src\Server_files\Devices\IDevice.cs" />
-    <Compile Include="src\Server_files\Forms\MainWindow.cs">
+    <Compile Include="src\ServerFiles\Applications\IApplication.cs" />
+    <Compile Include="src\ServerFiles\Devices\IDevice.cs" />
+    <Compile Include="src\ServerFiles\Forms\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\Server_files\Forms\MainWindow.Designer.cs">
+    <Compile Include="src\ServerFiles\Forms\MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\Server_files\Devices\KUKA\E6POS.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\KUKARobot.cs" />
-    <Compile Include="src\Server_files\Devices\OptiTrack\OptiTrackSystem.cs" />
-    <Compile Include="src\Old_files\Maths\Vector3.cs" />
-    <Compile Include="src\Server_files\Program.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\RSI\InputFrame.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\RSI\OutputFrame.cs" />
-    <Compile Include="src\Server_files\Devices\KUKA\RSI\RSIAdapter.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\E6POS.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\KUKARobot.cs" />
+    <Compile Include="src\ServerFiles\Devices\OptiTrack\OptiTrackSystem.cs" />
+    <Compile Include="src\ServerFiles\Program.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\RSI\InputFrame.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\RSI\OutputFrame.cs" />
+    <Compile Include="src\ServerFiles\Devices\KUKA\RSI\RSIAdapter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -143,22 +143,22 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="src\Server_files\Forms\CalibrationWindow.resx">
+    <EmbeddedResource Include="src\ServerFiles\Forms\CalibrationWindow.resx">
       <DependentUpon>CalibrationWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\Server_files\Forms\ThreadSafeChart.resx">
+    <EmbeddedResource Include="src\ServerFiles\Forms\ThreadSafeChart.resx">
       <DependentUpon>ThreadSafeChart.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\Server_files\Forms\MainWindow.resx">
+    <EmbeddedResource Include="src\ServerFiles\Forms\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\Server_files\Forms\KUKAChart.resx">
-      <DependentUpon>KUKAChart.cs</DependentUpon>
+    <EmbeddedResource Include="src\ServerFiles\Forms\KUKADataPanel.resx">
+      <DependentUpon>KUKADataPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="src\Docs_files\eggert_comparison_mva97.pdf" />
-    <None Include="src\Docs_files\LN9_TrajectoryGeneration.pdf" />
-    <None Include="src\Docs_files\Meissner feat. Pazda.pdf" />
+    <None Include="src\DocsFiles\eggert_comparison_mva97.pdf" />
+    <None Include="src\DocsFiles\LN9_TrajectoryGeneration.pdf" />
+    <None Include="src\DocsFiles\Meissner feat. Pazda.pdf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -168,11 +168,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="src\Docs_files\NatNetUsersGuide.pdf" />
-    <None Include="src\Docs_files\RSI_40.pdf" />
-    <None Include="src\Docs_files\Trajectory generator.pdf" />
-    <None Include="src\KUKA_files\RSI_Ethernet.rsix" />
-    <None Include="src\KUKA_files\RSI_Ethernet.src" />
+    <None Include="src\DocsFiles\NatNetUsersGuide.pdf" />
+    <None Include="src\DocsFiles\RSI_40.pdf" />
+    <None Include="src\DocsFiles\Trajectory generator.pdf" />
+    <None Include="src\KUKAFiles\RSI_Ethernet.rsix" />
+    <None Include="src\KUKAFiles\RSI_Ethernet.src" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -180,7 +180,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="ping-pong.ico" />
-    <Content Include="src\KUKA_files\RSI_EthernetConfig.xml" />
+    <Content Include="src\KUKAFiles\RSI_EthernetConfig.xml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
