--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -77,22 +77,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\ServerFiles\Commands\Command.cs" />
+    <Compile Include="src\ServerFiles\Commands\CommandArgs.cs" />
+    <Compile Include="src\ServerFiles\Forms\CommandLine.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="src\ServerFiles\Forms\CommandLine.Designer.cs">
+      <DependentUpon>CommandLine.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\ServerFiles\Maths\CubicSolver.cs" />
     <Compile Include="src\ServerFiles\Maths\LUD3.cs" />
     <Compile Include="src\ServerFiles\Maths\Matrix3.cs" />
+    <Compile Include="src\ServerFiles\Maths\PolyFit.cs" />
     <Compile Include="src\ServerFiles\Maths\QuadraticSolver.cs" />
     <Compile Include="src\ServerFiles\Maths\QuarticSolver.cs" />
     <Compile Include="src\ServerFiles\Maths\SVD3.cs" />
     <Compile Include="src\ServerFiles\Maths\Vector3.cs" />
-    <Compile Include="src\Scrap\Trajectory\Gen.cs" />
-    <Compile Include="src\Scrap\Trajectory\Gen2.cs" />
-    <Compile Include="src\Scrap\Trajectory\Gen3.cs" />
-    <Compile Include="src\Scrap\Trajectory\Gen4.cs" />
-    <Compile Include="src\Scrap\Trajectory\gen5.cs" />
-    <Compile Include="src\Scrap\Trajectory\Generator.cs" />
-    <Compile Include="src\Scrap\Trajectory\OptiTrackCalibration.cs" />
-    <Compile Include="src\Scrap\Trajectory\PolynominalTest.cs" />
-    <Compile Include="src\Scrap\Trajectory\TrajectoryGenerator7.cs" />
+    <Compile Include="src\OldFiles\Gen.cs" />
+    <Compile Include="src\OldFiles\Gen2.cs" />
+    <Compile Include="src\OldFiles\Gen3.cs" />
+    <Compile Include="src\OldFiles\Gen4.cs" />
+    <Compile Include="src\OldFiles\gen5.cs" />
+    <Compile Include="src\OldFiles\Generator.cs" />
+    <Compile Include="src\OldFiles\OptiTrackCalibration.cs" />
+    <Compile Include="src\OldFiles\PolynominalTest.cs" />
+    <Compile Include="src\OldFiles\TrajectoryGenerator7.cs" />
     <Compile Include="src\ServerFiles\Devices\KUKA\E6AXIS.cs" />
     <Compile Include="src\ServerFiles\Devices\KUKA\TrajectoryGenerator2.cs" />
     <Compile Include="src\ServerFiles\Devices\OptiTrack\BallData.cs" />
@@ -103,11 +112,11 @@
     <Compile Include="src\ServerFiles\Forms\CalibrationWindow.Designer.cs">
       <DependentUpon>CalibrationWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="src\ServerFiles\Forms\KUKADataPanel.cs">
+    <Compile Include="src\ServerFiles\Forms\RobotDataPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="src\ServerFiles\Forms\KUKADataPanel.Designer.cs">
-      <DependentUpon>KUKADataPanel.cs</DependentUpon>
+    <Compile Include="src\ServerFiles\Forms\RobotDataPanel.Designer.cs">
+      <DependentUpon>RobotDataPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="src\ServerFiles\Maths\Transformation.cs" />
     <Compile Include="src\ServerFiles\Devices\KUKA\TrajectoryGenerator.cs" />
@@ -146,14 +155,17 @@
     <EmbeddedResource Include="src\ServerFiles\Forms\CalibrationWindow.resx">
       <DependentUpon>CalibrationWindow.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="src\ServerFiles\Forms\CommandLine.resx">
+      <DependentUpon>CommandLine.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\ServerFiles\Forms\ThreadSafeChart.resx">
       <DependentUpon>ThreadSafeChart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\ServerFiles\Forms\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="src\ServerFiles\Forms\KUKADataPanel.resx">
-      <DependentUpon>KUKADataPanel.cs</DependentUpon>
+    <EmbeddedResource Include="src\ServerFiles\Forms\RobotDataPanel.resx">
+      <DependentUpon>RobotDataPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="src\DocsFiles\eggert_comparison_mva97.pdf" />
@@ -168,6 +180,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="src\DocsFiles\Metody15 %281%29.pdf" />
+    <None Include="src\DocsFiles\Metody15.pdf" />
     <None Include="src\DocsFiles\NatNetUsersGuide.pdf" />
     <None Include="src\DocsFiles\RSI_40.pdf" />
     <None Include="src\DocsFiles\Trajectory generator.pdf" />
