--- a/PingPong/PingPong.csproj
+++ b/PingPong/PingPong.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\ServerFiles\Applications\Ping.cs" />
     <Compile Include="src\ServerFiles\Commands\ClearCommand.cs" />
     <Compile Include="src\ServerFiles\Commands\ICommand.cs" />
     <Compile Include="src\ServerFiles\Commands\CommandArgs.cs" />
@@ -109,7 +110,6 @@
     <Compile Include="src\ServerFiles\Devices\KUKA\E6AXIS.cs" />
     <Compile Include="src\ServerFiles\Devices\KUKA\TrajectoryGenerator2.cs" />
     <Compile Include="src\ServerFiles\Devices\OptiTrack\BallData.cs" />
-    <Compile Include="src\ServerFiles\Devices\OptiTrack\CalibrationTool.cs" />
     <Compile Include="src\ServerFiles\Forms\CalibrationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
